# pkg/server/requests.go
@@ -5,9 +5,12 @@ import (
 	"net/http"
 	"newproxy/pkg/agent"
 	"newproxy/pkg/capture"
+	"newproxy/pkg/mutation"
 	"path/filepath"
 
 	"github.com/labstack/echo/v4"
+	"github.com/pkg/errors"
+	v1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 )
 
 // getAgents godoc
@@ -16,24 +19,111 @@ import (
 // @Produce      json
 // @Tags         agents
 // @Failure      500  {string}  string
-// @Success      200  {object}  []agent.AgentInfo
+// @Success      200  {object}  []agent.Info
 // @Router       /api/v1/agents [get]
 func (s *Server) getAgents(c echo.Context) error {
 	c.Request().Header.Set(echo.HeaderXRequestID, "getAgents")
-	resp := []agent.Info{}
+
+	resp := []*agent.Info{}
+
+	if err := s.RegisterK8sAgents(); err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, errors.WithMessage(err, "could not fetch k8s agents"))
+	}
+
 	for _, agent := range s.Agents {
 		resp = append(resp, agent.Info())
 	}
+
 	return c.JSON(http.StatusOK, resp)
 }
 
 type KptureRequest struct {
-	Name          string        `json:"name,omitempty"`
-	AgentsRequest AgentsRequest `json:"agents,omitempty"`
+	KptureName    string        `json:"kptureName,omitempty"`
+	AgentsRequest AgentsRequest `json:"agentsRequest,omitempty"`
 }
+
+type KptureNamespaceRequest struct {
+	KptureName      string `json:"kptureName,omitempty"`
+	KptureNamespace string `json:"kptureNamespace,omitempty"`
+}
+
 type AgentsRequest []struct {
 	Name      string `json:"name,omitempty"`
 	Namespace string `json:"namespace,omitempty"`
+}
+
+// @Summary      Start namespace kpture
+// @Description  Start namespace kpture
+// @Accept       json
+// @Produce      json
+// @Tags         kptures kubernetes
+// @Param        data  body      KptureNamespaceRequest  true  "namespace for capture"
+// @Failure      500  {string}  string
+// @Success      200   {object}  capture.Kpture
+// @Header       200   {string}  Websocket  ""
+// @Router       /api/v1/kpture/k8s/namespace [post]
+func (s *Server) startNamespacedKpture(c echo.Context) error {
+	c.Request().Header.Set(echo.HeaderXRequestID, "startNamespacedKpture")
+
+	u := &KptureNamespaceRequest{}
+	if err := c.Bind(u); err != nil {
+		s.logger.Errorf("error binding request: %v", err)
+
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	if u.KptureName == "" {
+		return echo.NewHTTPError(http.StatusBadRequest, "kpture name is empty")
+	}
+
+	agents := []capture.Agent{}
+
+	for _, agent := range s.Agents {
+		if agent.Info().Namespace == u.KptureNamespace {
+			agents = append(agents, agent)
+		}
+	}
+
+	if len(agents) == 0 {
+		return echo.NewHTTPError(http.StatusBadRequest, "no agents in namespace "+u.KptureNamespace)
+	}
+
+	k, err := s.StartKpture(u.KptureName, agents)
+	if err != nil {
+		s.logger.Errorf("error starting capture: %v", err)
+
+		return c.JSON(http.StatusInternalServerError, err)
+	}
+
+	return c.JSON(http.StatusOK, k)
+}
+
+// @Summary      Get enabled kubernetes namespaces
+// @Description  Get enabled kubernetes namespaces
+// @Accept       json
+// @Produce      json
+// @Tags         kubernetes
+// @Failure      500  {string}  string
+// @Success      200   {object}  []string
+// @Router       /api/v1/kpture/k8s/namespaces [GET]
+func (s *Server) getKubernetesEnabledNs(c echo.Context) error {
+	c.Request().Header.Set(echo.HeaderXRequestID, "getKubernetesEnabledNs")
+
+	namespaces := []string{}
+	label := fmt.Sprintf("%s=%s", mutation.NameSpaceSelectorLabel, mutation.NameSpaceSelectorValue)
+	opts := v1.ListOptions{LabelSelector: label}
+	nsCli := s.kubeclient.CoreV1().Namespaces()
+
+	ns, err := nsCli.List(c.Request().Context(), opts)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, errors.WithMessage(err, "could not fetch namespaces from k8s api"))
+	}
+
+	for _, currns := range ns.Items {
+		namespaces = append(namespaces, currns.Name)
+	}
+
+	return c.JSON(http.StatusOK, namespaces)
 }
 
 // @Summary      Start Kpture
@@ -47,16 +137,18 @@ type AgentsRequest []struct {
 // @Header       200   {string}  Websocket  ""
 // @Router       /api/v1/kpture [post]
 func (s *Server) startKpture(c echo.Context) error {
-	c.Request().Header.Set(echo.HeaderXRequestID, "StartPodCapture")
+	c.Request().Header.Set(echo.HeaderXRequestID, "startkpture")
+
 	u := &KptureRequest{}
 
 	if err := c.Bind(u); err != nil {
 		s.logger.Errorf("error binding request: %v", err)
+
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
-	fmt.Println(u)
 
 	agents := []capture.Agent{}
+
 	for _, pod := range u.AgentsRequest {
 		for _, agent := range s.Agents {
 			if agent.Info().Name == pod.Name && agent.Info().Namespace == pod.Namespace {
@@ -64,9 +156,11 @@ func (s *Server) startKpture(c echo.Context) error {
 			}
 		}
 	}
-	k, err := s.StartKpture(u.Name, agents)
+
+	k, err := s.StartKpture(u.KptureName, agents)
 	if err != nil {
 		s.logger.Errorf("error starting capture: %v", err)
+
 		return c.JSON(http.StatusInternalServerError, err)
 	}
 
@@ -82,23 +176,24 @@ func (s *Server) startKpture(c echo.Context) error {
 // @Failure      404  {string}  string
 // @Success      200   {object}  capture.Kpture
 // @Router       /api/v1/kpture/{uuid}/stop [put]
-func (s *Server) stopKpture(c echo.Context) (err error) {
+func (s *Server) stopKpture(c echo.Context) error {
 	c.Request().Header.Set(echo.HeaderXRequestID, "StopPodCapture")
 	uuid := c.Param("uuid")
+
 	k := s.GetKpture(uuid)
 	if k == nil {
 		return c.JSON(http.StatusNotFound, "capture not found")
 	}
 
-	err = k.Stop()
-	if err != nil {
+	if err := k.Stop(); err != nil {
 		return err
 	}
+
 	return c.JSON(http.StatusOK, k)
 }
 
-// @Summary      Download Kpture
-// @Description  Download Kpture
+// @Summary      Download kpture
+// @Description  Download kpture
 // @Produce      json
 // @Tags         kptures
 // @Param        uuid  path      string  true  "capture uuid"
@@ -108,19 +203,21 @@ func (s *Server) stopKpture(c echo.Context) (err error) {
 func (s *Server) downLoadKpture(c echo.Context) error {
 	c.Request().Header.Set(echo.HeaderXRequestID, "DownLoadCapture")
 	uuid := c.Param("uuid")
+
 	kpture := s.GetKpture(uuid)
 	if kpture == nil {
 		return c.JSON(http.StatusNotFound, "capture not found")
 	}
+
 	if kpture.Status != capture.KptureStatusTerminated {
 		return c.JSON(http.StatusBadRequest, "capture not finished")
 	}
-	// fmt.Println(filepath.Join("captures", kpture.UUID, kpture.Name+".tar.gzip"))
-	return c.Redirect(http.StatusMovedPermanently, filepath.Join("/captures", kpture.UUID, kpture.Name+".tar.gzip"))
+
+	return c.Redirect(http.StatusMovedPermanently, filepath.Join("/captures", kpture.UUID, kpture.Name+".tar"))
 }
 
-// @Summary      get K8S capture
-// @Description  get K8S capture
+// @Summary      Get kapture
+// @Description  Get kapture
 // @Produce      json
 // @Tags         kptures
 // @Param        uuid  path      string  true  "capture uuid"
@@ -132,14 +229,16 @@ func (s *Server) getKpture(c echo.Context) error {
 	c.Request().Header.Set(echo.HeaderXRequestID, "DownLoadCapture")
 	uuid := c.Param("uuid")
 	kpture := s.GetKpture(uuid)
+
 	if kpture == nil {
 		return c.JSON(http.StatusNotFound, "capture not found")
 	}
+
 	return c.JSON(http.StatusOK, kpture)
 }
 
-// @Summary      get K8S capture
-// @Description  get K8S capture
+// @Summary      Get kaptures
+// @Description  Get kaptures
 // @Tags         kptures
 // @Produce      json
 // @Failure      500   {string}  string
